add functions fo r display and hiding contact info

--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
         <div class="panel-body">
           <div class="list">
             <ul id="list">
-              <li>Bob</li>
-              <li>Sue</li>
+              <li>
+                <p class="contact-name">Bob</p>
+                <p class="contact-phone">503-123-4567</p>
+                <p class="contact-address">123 Oak st</p>
+                <p class="contact-email">bob@bob.com</p>
+              </li>
+                <p class="contact-name">Sue</p>
+                <p class="contact-phone">503-555-5555</p>
             </ul>
           </div>
           <div class="details">
