--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
+        <h1>Address Book</h1>
+      </div>
       <div class="panel add-contact">
         <h2>Add Contact</h2>
         <form id="contact">
